--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 
+  <!--
     normalize.css removes cross-browser differences in defaults, e.g.,
     differences in how form elements appear between Firefox and IE
     See: http://necolas.github.com/normalize.css/
@@ -18,6 +18,15 @@
   <title></title>
 </head>
 <body>
+  <% if session[:user_id] %>
+    <form action="/logout" method="post">
+      <input type="hidden" name="_method" value="delete" />
+      <input type="submit" value="logout" />
+    </form>
+    <button><a href="/users/<%= session[:user_id] %>">My Profile</a></button>
+    <button><a href="/albums/all">All Albums</a></button>
+    <button><a href="/albums/new">Create New Album</a></button>
+  <% end %>
   <%= yield %>
 </body>
 </html>
